--- a/ecommerce/templates/app.ecommerce.deliveryDetailEmail.html
+++ b/ecommerce/templates/app.ecommerce.deliveryDetailEmail.html
@@ -326,7 +326,7 @@
                 <Strong>Payment Mode:</strong> {{order.paymentMode}}</p>
               <hr>
               <p>Kind Regards,</p>
-              <h3>Team Sterling Select</h3>
+              <h3>Team {{sendersAddress}}</h3>
             </th>
           </tr>
         </table>
