--- a/ecommerce/templates/app.ecommerce.emailDetail.html
+++ b/ecommerce/templates/app.ecommerce.emailDetail.html
@@ -333,7 +333,7 @@
                 <p><Strong>Payment Mode:</strong> {{data.paymentMode}}</p>
                   <hr>
                   <p>Kind Regards,</p>
-                  <h3>Team Sterling Select</h3>
+                  <h3>Team {{sendersAddress}}</h3>
               </th>
             </tr>
           </table>
