--- a/ecommerce/templates/ngEcommerce.html
+++ b/ecommerce/templates/ngEcommerce.html
@@ -230,6 +230,7 @@
       var wampServer = '{{wampServer}}';
       var wampBindName = "{{user.username}}";
       var ICON_LOGO = "{{data.icon_logo}}";
+      var BRAND_TITLE = "{{data.brand_title}}";
     </script>
     <script src="{% static 'js/app.ecommerce.public.js' %}"></script>
     <script src="{% static 'js/custom/wampProcessors.js' %}"></script>
