--- a/homepage/templates/footer.html
+++ b/homepage/templates/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 hidden-sm hidden-xs text-left">
-        <span class="copyright">Copyright &copy;  Sterling Select 2017 </span>
+        <span class="copyright">Copyright &copy;  {{brand_title}} 2018 </span>
       </div>
       <div class="col-md-6 hidden-sm hidden-xs text-right">
         <ul class="list-inline quicklinks">
@@ -17,7 +17,7 @@
         </ul>
       </div>
       <div class="col-sm-12 col-xs-12 hidden-lg hidden-md text-center">
-        <span class="copyright">Copyright &copy;  Sterling Select 2017 </span>
+        <span class="copyright">Copyright &copy;  {{brand_title}} 2018 </span>
       </div>
       <div class="col-sm-12 col-xs-12 hidden-lg hidden-md text-center">
         <ul class="list-inline quicklinks">
