--- a/ecommerce/templates/ebs.payment.html
+++ b/ecommerce/templates/ebs.payment.html
@@ -22,6 +22,14 @@ name="frmTransaction" id="frmTransaction">
   </form>
 
 
+  <script type="text/javascript">
+
+    window.location = '/view_that_asks_for_money/?orderid=33'
+
+
+
+  </script>
+
 
   </body>
 </html>
