--- a/HR/templates/login.html
+++ b/HR/templates/login.html
@@ -68,7 +68,7 @@
       <input type="text" name="mobile" value="" id="regMobile">
     </form>
 
-    <div class="col-md-12 col-sm-12 col-xs-12 text-right" style="margin-top:60%">
+    <div class="col-md-12 col-sm-12 col-xs-12 text-right" style='bottom:0;right:0;position:fixed'>
       <a href="/admin/?next=/ERP/">Admin Login</a>
     </div>
   </div>
