--- a/ecommerce/templates/ngEcommerce.html
+++ b/ecommerce/templates/ngEcommerce.html
@@ -63,6 +63,13 @@
     <!-- custom css -->
     <link rel="stylesheet" href="{% static 'css/custom/base.css' %}" charset="utf-8">
     <link rel="stylesheet" href="{% static 'css/app.ecommerce.css' %}" charset="utf-8">
+
+    <style media="screen">
+      :root { --themeColor: {{data.color}};}
+    </style>
+
+
+
   </head>
   <body style="background-color:white;">
   <!-- <body style="background-image: url(/static/images/sterlingSelect_banner.jpg);"> -->
