--- a/HR/templates/loginNew.html
+++ b/HR/templates/loginNew.html
@@ -40,7 +40,7 @@
     </form>
 
     <div class="col-md-12 col-sm-12 col-xs-12 text-right" style="margin-top:60%">
-        <a href="/admin/?next=/ERP/">Admin Login</a>
+        <a href="/login/?next=/ERP/">Admin Login</a>
     </div>
   </div>
   {% if useCDN %}
