--- a/HR/templates/loginCopy.html
+++ b/HR/templates/loginCopy.html
@@ -50,7 +50,7 @@
     </form>
 
     <div class="col-md-12 col-sm-12 col-xs-12 text-right" style="bottom:0;right:0;position:fixed">
-    <a href="/admin/?next=/ERP/">Admin Login</a>
+    <a href="/login/?next=/ERP/">Admin Login</a>
     </div>
   </div>
 
