--- a/ecommerce/templates/ngEcommerce.html
+++ b/ecommerce/templates/ngEcommerce.html
@@ -238,6 +238,7 @@
       var wampBindName = "{{user.username}}";
       var ICON_LOGO = "{{data.icon_logo}}";
       var BRAND_TITLE = "{{data.brand_title}}";
+      var INVENTORY_ENABLED = "{{data.inventory}}";
     </script>
     <script src="{% static 'js/app.ecommerce.public.js' %}"></script>
     <script src="{% static 'js/custom/wampProcessors.js' %}"></script>
