--- a/ecommerce/templates/ngEcommerce.html
+++ b/ecommerce/templates/ngEcommerce.html
@@ -116,9 +116,9 @@
               <span ng-if="p.prodSku!=p.product.product.serialNo">{{(p.prodVarPrice * p.qty).toFixed(2)}}</span>
             </div>
 
-            <div class="row" style="margin:0px;padding-left:20px;" ng-if="p.product.in_stock=='false'">
+            <!-- <div class="row" style="margin:0px;padding-left:20px;" ng-if="p.product.in_stock=='false'">
               <span style="font-size:18px;color:#ef4a1e">Out Of Stock</span>
-            </div>
+            </div> -->
           </div>
 
           <div class="text-center" style="padding:20px;cursor:pointer;background-color:var(--themeColor);color:white" ng-click="checkout()">
@@ -156,9 +156,9 @@
             </div>
 
 
-            <div class="row" style="margin:0px;padding-left:20px;" ng-if="p.in_stock=='false'">
+            <!-- <div class="row" style="margin:0px;padding-left:20px;" ng-if="p.in_stock=='false'">
               <span style="font-size:18px;color:#ef4a1e">Out Of Stock</span>
-            </div>
+            </div> -->
 
           </div>
 
