--- a/HR/templates/login.html
+++ b/HR/templates/login.html
@@ -7,9 +7,9 @@
   <meta charset="utf-8">
   <title>Login</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="fb:app_id" content="1690799947851449">
-    <link rel="profile" href="http://gmpg.org/xfn/11">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="fb:app_id" content="1690799947851449">
+  <link rel="profile" href="http://gmpg.org/xfn/11">
   {% if useCDN %}
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" charset="utf-8">
@@ -23,7 +23,7 @@
   <div class="col-md-8 hidden-sm hidden-xs" style="background-image: url('{{backgroundImage}}');background-size: cover;height:100%;position:absolute;left:0px;">
   </div>
   <div class="col-md-4 col-sm-12 col-xs-12" style="height:100%;position:absolute;right:0px;padding-top:20px">
-    <a  href="/" style="outline: none;border:none"><img class="text-center"  src="{{icon_logo}}" alt="" width="200" height="150" Style="display:block;margin-left: auto;margin-right: auto;"></a>
+    <a href="/" style="outline: none;border:none"><img class="text-center" src="{{icon_logo}}" alt="" width="200" Style="display:block;margin-left: auto;margin-right: auto;"></a>
     <form method="post" class="form-signin" action="" style="padding:0px;max-width: 400px;">{% csrf_token %}
       <h2 class="form-signin-heading" style="color:black;margin-top:70px;">Login</h2> {% if authStatus.status != 'default' %}
       <div class="alert alert-{{authStatus.status}}">{{authStatus.message}}</div>
@@ -34,33 +34,41 @@
       </div>
 
       <div class="form-group">
-      <div class="col-md-2 col-sm-2 col-xs-2 text-right" style="padding-top:10px">
-      <span>+91</span>
+        <div class="col-md-2 col-sm-2 col-xs-2 text-right" style="padding-top:10px">
+          <span>+91</span>
+        </div>
+        <div class="col-md-10 col-sm-10 col-xs-10">
+          <label for="username" class="sr-only">Mobile Number</label>
+          <input id="username" name="username" type="text" maxlength="10" class="form-control" placeholder="Mobile Number" required autofocus>
+        </div>
+        <!--   <input id="otp" name="otp" type="text" class="form-control" placeholder="OTP" required autofocus> -->
+        <div class="col-md-10 col-md-offset-2 col-xs-10 col-xs-offset-2 col-sm-10 col-sm-offset-2">
+          <label for="password" class="sr-only">Password</label>
+          <input id="password" name="password" type="password" class="form-control" placeholder="Password" required>
+          <button id="signIn" style="margin-bottom:20px; margin-top:10px;" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        </div>
       </div>
-      <div class="col-md-10 col-sm-10 col-xs-10">
-        <label for="username" class="sr-only">Mobile Number</label>
-       <input id="username" name="username" type="text" maxlength="10" class="form-control" placeholder="Mobile Number" required autofocus>
-     </div>
-       <!--   <input id="otp" name="otp" type="text" class="form-control" placeholder="OTP" required autofocus> -->
-       <div class="col-md-10 col-md-offset-2 col-xs-10 col-xs-offset-2 col-sm-10 col-sm-offset-2">
-       <label for="password" class="sr-only">Password</label>
-       <input id="password" name="password" type="password" class="form-control" placeholder="Password" required>
-       <button id="signIn" style="margin-bottom:20px; margin-top:10px;" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-     </div>
-     </div>
 
-   <!--    <a style="color:black;" href="/accounts/password/reset/">Forgot password?</a><br/> -->
+      <!--    <a style="color:black;" href="/accounts/password/reset/">Forgot password?</a><br/> -->
       <div class="col-md-10 col-xs-10 col-sm-10 col-md-offset-2 col-xs-offset-2 col-sm-offset-2 ">
         <a style="color:black;" href="registerPage">New User?</a>
       </div>
       <div class="col-md-12 col-sm-12 col-xs-12">
-      <div id="requestOTP" style="width:100px;height:100px;background-color:#0a9199;border-radius:50px; padding-top:10px;margin:auto;margin-top:50px;cursor:pointer;" class="text-center">
+        <div id="requestOTP" style="width:100px;height:100px;background-color:#0a9199;border-radius:50px; padding-top:10px;margin:auto;margin-top:50px;cursor:pointer;" class="text-center">
           <span style="color:white;">
-              <i class="fa fa-mobile fa-3x" ></i> <br>
-              <span id="otptxt">Send OTP</span>
-            </span>
+            <i class="fa fa-mobile fa-3x"></i> <br>
+            <span id="otptxt">Send OTP</span>
+          </span>
         </div>
       </div>
+      <div class="col-md-12 col-sm-12 col-xs-12" style="margin-top:10px">
+      <a title="Google" class="btn btn-danger btn-block" href="{% provider_login_url "google" method="oauth2" %}">
+        <i class="fa fa-google-plus pull-left"></i>Login with Google
+      </a>
+      <a href="{% provider_login_url "facebook" method="oauth2" %}" class="btn btn-primary btn-block">
+        <i class="fa fa-facebook pull-left"></i> Login with Facebook
+      </a>
+    </div>
     </form>
 
     <form class="" action="/register" method="post" style="display:none;" id="regFrm">
@@ -100,14 +108,14 @@
         if (id.length == 0) {
           $('#alerts').append('<div class="alert alert-warning">Please enter your Mobile number or Email or Username</div>')
         } else {
-          console.log(id,'kkkkkkkkkkkkkkkkkkkkkkkkk')
+          console.log(id, 'kkkkkkkkkkkkkkkkkkkkkkkkk')
           var csrf = $.cookie("csrftoken")
           console.log();
           $.ajax({
             url: '/generateOTP',
             data: {
               id: id,
-              csrfmiddlewaretoken :csrf
+              csrfmiddlewaretoken: csrf
             },
             beforeSend: function(request) {
               request.setRequestHeader("X-CSRFToken", csrf);
@@ -133,7 +141,7 @@
               $('#otptxt').append("Resend OTP");
             },
             error: function(e) {
-              console.log($('#regMobile')[0].name,$('#username').val());
+              console.log($('#regMobile')[0].name, $('#username').val());
               $('#alerts').append('<div class="alert alert-danger">You Have No Account , We Are Creating New Account For You</div>')
               $('#regMobile')[0].value = $('#username').val();
               $('#regFrm').submit();
