--- a/homepage/templates/registration.lite.html
+++ b/homepage/templates/registration.lite.html
@@ -58,7 +58,7 @@
 
   <div class="body">
       <hr style="margin:0px;border: solid 2px #DCDCDC;">
-    <div class="container" style="padding-left:0px;padding-right:0px;box-shadow: 0px 30px 50px 12px #d0d5dd;">
+    <div class="container" style="padding-left:0px;padding-right:0px;box-shadow: 0px 30px 50px 12px #d0d5dd;" ng-if="!details">
       <section style="background-color:white">
         <div class="row">
           <div class="col-lg-12 text-center" style="margin-bottom:30px;">
@@ -157,6 +157,60 @@
       {% include "footer.html" %}
 
     </div>
+
+      <div class="container" style="padding-left:0px;padding-right:0px;box-shadow: 0px 30px 50px 12px #d0d5dd;" ng-if="details">
+        <div class="row">
+          <div class="col-lg-12 text-center" style="margin-bottom:30px;">
+            <h2 class="section-heading" style="color: #a39c9c;margin-bottom:0px">Add the Details</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3">
+            <div class="row">
+              <div class="col-md-3 col-sm-3 col-xs-3 text-right">
+                <span><i class="fa fa-user" style="margin-top: 45px;font-size: 20px;color:#147fcc"></i></span>
+              </div>
+              <div class="col-md-9 col-sm-9 col-xs-9">
+                <div class="form-group">
+                  <input onkeydown='return (event.which >= 48 && event.which <= 57) || event.which == 8 || event.which == 46 || event.which == 9 ||( event.which > 94 && event.which <106)'  maxlength="10" ng-model="form.name" type="text" class="form-control floatInput" required/>
+                  <span class="floating-label">Name </span>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-3 col-sm-3 col-xs-3 text-right">
+                  <span><i class="fa fa-envelope-o" style="margin-top: 45px;font-size: 20px;color:#147fcc"></i></span>
+              </div>
+              <div class="col-md-9 col-sm-9 col-xs-9">
+                <div class="form-group">
+                  <input onkeydown='return (event.which >= 48 && event.which <= 57) || event.which == 8 || event.which == 46 || event.which == 9 ||( event.which > 94 && event.which <106)'  maxlength="10" ng-model="form.email" type="text" class="form-control floatInput" required/>
+                  <span class="floating-label">Email </span>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-3 col-sm-3 col-xs-3 text-right">
+                <span><i class="fa fa-phone" style="margin-top: 45px;font-size: 20px;color:#147fcc"></i></span>
+              </div>
+              <div class="col-md-9 col-sm-9 col-xs-9">
+                <div class="form-group">
+                  <input onkeydown='return (event.which >= 48 && event.which <= 57) || event.which == 8 || event.which == 46 || event.which == 9 ||( event.which > 94 && event.which <106)'  maxlength="10" ng-model="form.password" type="text" class="form-control floatInput" required/>
+                  <span class="floating-label">Password</span>
+                </div>
+              </div>
+            </div>
+            <div class="row" stryle= "margin-bottom:20px">
+            <div class="col-lg-6 col-md-6 text-right" style="margin-top:20px;">
+              <button style="width:100px" class="btn btn-primary">Skip</button>
+            </div>
+                <div class="col-lg-6 col-md-6 text-left" style="margin-top:20px;">
+              <button   style="width:100px"  class="btn btn-primary">Submit</button>
+            </div>
+          </div>
+          </div>
+        </div>
+        {% include "footer.html" %}
+      </div>
   </div>
 </div>
 
