--- a/HR/templates/login.html
+++ b/HR/templates/login.html
@@ -16,29 +16,33 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" charset="utf-8"> {% else %}
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" charset="utf-8">
   <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}" charset="utf-8"> {% endif %}
-  <link rel="stylesheet" href="{% static 'css/signin.css' %}" charset="utf-8">
+  <!-- <link rel="stylesheet" href="{% static 'css/signin.css' %}" charset="utf-8"> -->
 </head>
 
 <body style="height:100%">
   <div class="col-md-8 hidden-sm hidden-xs" style="background-image: url('{{backgroundImage}}');background-size: cover;height:100%;position:absolute;left:0px;">
   </div>
-  <div class="col-md-4 col-sm-12 col-xs-12" style="height:100%;position:absolute;right:0px;padding-top:20px">
-    <a href="/" style="outline: none;border:none"><img class="text-center" src="{{icon_logo}}" alt="" width="200" Style="display:block;margin-left: auto;margin-right: auto;"></a>
-    <form method="post" class="form-signin" action="" style="padding:0px;max-width: 400px;">{% csrf_token %}
+  <div class="col-md-4 col-sm-12 col-xs-12" style="height:100%;position:absolute;right:0px;padding-top:20px;padding:40px;">
+    <a style="outline: none;border:none"><img class="text-center" src="{{icon_logo}}" alt="" width="200" Style="display:block;margin-left: auto;margin-right: auto;"></a>
 
       <div class="row">
-      <div class="col-md-6 col-sm-6 col-xs-6" style="margin-top:40px;text-align:center">
-      <a title="Google" class="btn btn-danger btn-block" href="{% provider_login_url "google" method="oauth2" %}" style="border-radius:50%;width:30%;margin-left:100px" >
-        <i class="fa fa-google-plus fa-2x"></i>
-      </a>
-    </div>
-      <div class="col-md-6 col-sm-6 col-xs-6 text-center" style="margin-top:40px">
-      <a href="{% provider_login_url "facebook" method="oauth2" %}" class="btn btn-primary btn-block" style="border-radius:50%;width:30%">
-        <i class="fa fa-facebook fa-2x"></i>
-      </a>
-    </div>
-  </div>
-      <h2 class="form-signin-heading" style="color:black;margin-top:70px;">Login</h2> {% if authStatus.status != 'default' %}
+        <div class="col-md-6 col-sm-6 col-xs-6" style="margin-top:40px;text-align:center">
+          <a title="Google" class="btn btn-danger btn-block" href="{% provider_login_url "google" method="oauth2" %}" style="border-radius:25px;" >
+            <i class="fa fa-google-plus fa-2x"></i> Google
+          </a>
+        </div>
+        <div class="col-md-6 col-sm-6 col-xs-6 text-center" style="margin-top:40px">
+          <a href="{% provider_login_url "facebook" method="oauth2" %}" class="btn btn-primary btn-block" style="border-radius:25px;">
+            <i class="fa fa-facebook fa-2x"></i> Facebook
+          </a>
+        </div>
+      </div>
+      <hr>
+      <div class="row text-center">
+        <span style="color:black;font-size:18px;">Login</span>
+      </div>
+
+      {% if authStatus.status != 'default' %}
       <div class="alert alert-{{authStatus.status}}">{{authStatus.message}}</div>
       {% endif %}
 
@@ -46,46 +50,32 @@
 
       </div>
 
-      <div class="form-group">
-        <div class="col-md-2 col-sm-2 col-xs-2 text-right" style="padding-top:10px">
-          <span>+91</span>
+      <form class="" action="" method="post">
+        <div class="row" style="margin:0px;margin-top:50px;">
+          <div class="col-md-2 col-sm-2 col-xs-2 text-right" style="padding-top:10px">
+            <span>+91</span>
+          </div>
+          <div class="col-md-8 col-sm-8 col-xs-8">
+            <label for="username" class="sr-only">Mobile Number</label>
+            <div class ="input-group" style="display:flex">
+              <input id="username" name="username" type="text" maxlength="10" class="form-control" placeholder="Mobile Number / Username" required autofocus>
+              <span class="input-group-btn">
+                <button id="requestOTP" class="btn btn-default" type="button">Get OTP</button>
+              </span>
+            </div>
+          </div>
         </div>
-        <div class="col-md-10 col-sm-10 col-xs-10">
-          <label for="username" class="sr-only">Mobile Number</label>
-          <div class ="form-group" style="display:flex">
-          <input id="username" name="username" type="text" maxlength="10" class="form-control" placeholder="Mobile Number" required autofocus>
-          <button id="requestOTP" style="float:right"> Send OTP</button>
-        </div>
-        </div>
-        <!--   <input id="otp" name="otp" type="text" class="form-control" placeholder="OTP" required autofocus> -->
         <div class="col-md-10 col-md-offset-2 col-xs-10 col-xs-offset-2 col-sm-10 col-sm-offset-2">
           <label for="password" class="sr-only">Password</label>
           <input id="password" name="password" type="password" class="form-control" placeholder="Password" required>
           <button id="signIn" style="margin-bottom:20px; margin-top:10px;" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
         </div>
-      </div>
+      </form>
 
-      <!--    <a style="color:black;" href="/accounts/password/reset/">Forgot password?</a><br/> -->
       <div class="col-md-10 col-xs-10 col-sm-10 col-md-offset-2 col-xs-offset-2 col-sm-offset-2 ">
         <a style="color:black;" href="registerPage">New User?</a>
       </div>
-      <!-- <div class="col-md-12 col-sm-12 col-xs-12">
-        <div id="requestOTP" style="width:100px;height:100px;background-color:#0a9199;border-radius:50px; padding-top:10px;margin:auto;margin-top:50px;cursor:pointer;" class="text-center">
-          <span style="color:white;">
-            <i class="fa fa-mobile fa-3x"></i> <br>
-            <span id="otptxt">Send OTP</span>
-          </span>
-        </div>
-      </div> -->
-      <!-- <div class="col-md-12 col-sm-12 col-xs-12" style="margin-top:10px">
-      <a title="Google" class="btn btn-danger btn-block" href="{% provider_login_url "google" method="oauth2" %}">
-        <i class="fa fa-google-plus pull-left"></i>Login with Google
-      </a>
-      <a href="{% provider_login_url "facebook" method="oauth2" %}" class="btn btn-primary btn-block">
-        <i class="fa fa-facebook pull-left"></i> Login with Facebook
-      </a>
-    </div> -->
-    </form>
+
 
     <form class="" action="/register" method="post" style="display:none;" id="regFrm">
       {% csrf_token %}
@@ -97,12 +87,6 @@
     </div>
   </div>
 
-  <!-- <div id="requestOTP" style="width:100px;height:100px;background-color:#0a9199;border-radius:50px; padding-top:10px;margin:auto;margin-top:50px;cursor:pointer;" class="text-center">
-    <span style="color:white;">
-        <i class="fa fa-mobile fa-3x" ></i> <br>
-        <span id="otptxt">Send OTP</span>
-      </span>
-  </div> -->
   {% if useCDN %}
   <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
@@ -114,8 +98,8 @@
 
   <script type="text/javascript">
     $(document).ready(function() {
-      $('#password').hide();
-      $('#signIn').hide();
+      // $('#password').hide();
+      // $('#signIn').hide();
 
       $('#requestOTP').click(function(e) {
 
@@ -166,8 +150,6 @@
           });
 
         }
-        $('#password').show();
-        $('#signIn').show();
       });
     });
   </script>
