--- a/HR/templates/login.html
+++ b/HR/templates/login.html
@@ -110,7 +110,7 @@
         } else {
           console.log(id, 'kkkkkkkkkkkkkkkkkkkkkkkkk')
           var csrf = $.cookie("csrftoken")
-          console.log();
+          console.log(csrf,'tokkkkkkkeeeeeeeeennnnnn');
           $.ajax({
             url: '/generateOTP',
             data: {
