--- a/ecommerce/templates/ngEcommerce.html
+++ b/ecommerce/templates/ngEcommerce.html
@@ -96,10 +96,9 @@
           </div>
 
           <div ng-repeat="p in inCart" style="border-bottom:solid 2px #eeeeee; ">
-
             <h5 ng-if="p.prod_howMuch==null" style="margin:10px;">{{p.product.product.name}} {{p.product.product.howMuch | convertUnit:p.product.product.unit }}</h5>
             <h5 ng-if="p.prod_howMuch" style="margin:10px;">{{p.product.product.name}} {{p.prod_howMuch| convertUnit : p.product.product.unit}}</h5>
-            <div class="row" style="margin:0px;">
+            <div class="row" style="margin:0px;" ng-if="p.stock>0||!p.stock">
               <div class="col-sm-4 text-right">
                 <i class="fa fa-minus-circle fa-2x ng-scope" style="cursor:pointer" ng-if="p.qty >0" ng-click="changeQty($index , 'decrease');"></i>
               </div>
@@ -117,9 +116,9 @@
               <span ng-if="p.prodSku!=p.product.product.serialNo">{{(p.prodVarPrice * p.qty).toFixed(2)}}</span>
             </div>
 
-            <!-- <div class="row" style="margin:0px;padding-left:20px;" ng-if="p.product.in_stock=='false'">
+            <div class="row" style="margin:0px;padding-left:20px;" ng-if="p.stock<=0">
               <span style="font-size:18px;color:#ef4a1e">Out Of Stock</span>
-            </div> -->
+            </div>
           </div>
 
           <div class="text-center" style="padding:20px;cursor:pointer;background-color:var(--themeColor);color:white" ng-click="checkout()">
