--- a/libreERP/templates/ngBase.html
+++ b/libreERP/templates/ngBase.html
@@ -234,6 +234,7 @@
     <script type="text/javascript">
       var wampServer = '{{wampServer}}';
       var wampBindName = "{{user.username}}";
+      var webRtcAddress = '{{webRtcAddress}}'
       var BRAND_LOGO = "{{BRAND_LOGO}}";
     </script>
     <script src="{% static 'js/custom/wampProcessors.js' %}"></script>
