--- a/ecommerce/templates/ngEcommerce.html
+++ b/ecommerce/templates/ngEcommerce.html
@@ -99,9 +99,9 @@
           <div ng-repeat="p in inCart" style="border-bottom:solid 2px #eeeeee; ">
             <h5 ng-if="p.prod_howMuch==null" style="margin:10px;">{{p.product.product.name}} {{p.product.product.howMuch | convertUnit:p.product.product.unit }}</h5>
             <div ng-if="p.prod_howMuch.length>0||p.prod_howMuch">
-            <h5 ng-if="p.product.product.unit!='Size and Color'" style="margin:10px;">{{p.product.product.name}} {{p.prod_howMuch| convertUnit : p.product.product.unit}}
+            <h5 ng-if="p.product.product.unit!='Size and Color'&&p.product.product.unit!='Size'" style="margin:10px;">{{p.product.product.name}} {{p.prod_howMuch| convertUnit : p.product.product.unit}}
             </h5>
-            <h5 ng-if="p.product.product.unit=='Size and Color'" style="margin:10px;">{{p.product.product.name}} - {{p.prod_howMuch| convertSize : p.product.product.unit}} - {{p.desc}}
+            <h5 ng-if="p.product.product.unit=='Size and Color'||p.product.product.unit=='Size'" style="margin:10px;">{{p.product.product.name}} - {{p.prod_howMuch| convertSize : p.product.product.unit}} - {{p.desc}}
             </h5>
           </div>
 
