--- a/static_shared/css/custom/base.css
+++ b/static_shared/css/custom/base.css
@@ -255,7 +255,7 @@
 }
 
 body {
-  background-color: #eee;
+  /*background-color: #eee;*/
 }
 
 .hoverableDiv :hover{
@@ -454,7 +454,7 @@ body {
 
 
 
-/*.navbar-default {
+.navbar-default {
   background-color: var(--themeMain);
   border-color:var(--headerNavbarHighlight);
 }
@@ -509,7 +509,7 @@ body {
     color: #ffffff;
     background-color: var(--headerNavbarHighlight);
   }
-}*/
+}
 
 
 .bs-callout {
