--- a/HR/templates/login.html
+++ b/HR/templates/login.html
@@ -63,7 +63,7 @@
             <div class ="input-group">
               <span class="input-group-addon"> +91</span>
               <input id="username" name="username" type="text" maxlength="10" class="form-control" placeholder="10-digit mobile number / Username" required autofocus>
-              <span class="input-group-addon"  id="requestOTP">
+              <span class="input-group-addon"  id="requestOTP" style="cursor:pointer;">
                 Get OTP
                 <!-- <button id="requestOTP" class="btn btn-default" type="button">Get OTP</button> -->
               </span>
